--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -28,22 +28,12 @@
 }
 
 .section {
-  height: 100vh;
-  padding: 2rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   text-align: center;
   z-index: 10;
-}
-
-.section3 {
-  background: #1d1d1d;
-}
-
-.section4 {
-  background: #252525;
+  background: black;
 }
 
 .section h2 {
@@ -57,4 +47,12 @@
   max-width: 600px;
   line-height: 1.6;
   color: #d4d4d4;
+}
+
+.featBlock1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
 }
