--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,3 +83,8 @@ section p {
   animation: positionChange 0.5s ease-in-out forwards;
 }
 
+@media screen and (max-width: 880px) {
+  .navContainer {
+    animation-delay: .4s !important;
+  }
+}
