--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,6 +34,7 @@
   text-align: center;
   z-index: 10;
   background: black;
+  position: relative;
 }
 
 .section h2 {
@@ -55,4 +56,41 @@
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+}
+
+.section4 {
+  position: relative;
+  overflow: hidden;
+}
+
+.section4::before {
+  z-index: 120;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: linear-gradient(90deg,rgb(0, 0, 0) 0%, rgb(82, 82, 82) 50%, rgb(0, 0, 0) 100%);
+}
+
+.section4::after {
+  z-index: 110;
+  content: '';
+  position: absolute;
+  top: -80px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 1200px;
+  height: 200px;
+  border-radius: 10vmax;
+  filter: blur(60px);
+  background-color: #000000;
+}
+
+@media screen and (max-width: 950px) {
+    .featBlock1 {
+        flex-direction: column;
+    }
 }
