--- a/src/components/home/cta-buttons/cta-buttons.module.css
+++ b/src/components/home/cta-buttons/cta-buttons.module.css
@@ -43,3 +43,10 @@
         opacity: 0.5;
     }
 }
+
+@media screen and (max-width: 880px) {
+    .ctaButtons {
+        animation-delay: .3s !important;
+    }
+    
+}
