--- a/src/components/home/cta-buttons/cta-buttons.module.css
+++ b/src/components/home/cta-buttons/cta-buttons.module.css
@@ -17,7 +17,7 @@
     gap: 20px;
     transform: translateX(-500px);
     animation: animate 0.5s ease forwards;
-    a {
+    a, button {
         color: white;
         background : rgba(26, 26, 26, 0.64);
         border-style : Solid;
@@ -30,15 +30,16 @@
         height: 50px;
         gap: 10px;
         border-radius: 8px;
+        cursor: pointer;
         transition: all 0.2s ease;
     }
-    a:hover {
+    a:hover, button:hover {
         background : rgba(255, 255, 255, 0.84);
         border: 1px solid rgba(255, 255, 255, 0.757);
         color: black;
     }
 
-    a:active {
+    a:active, button:active {
         transform: scale(0.95);
         opacity: 0.5;
     }
